# ferro-orm

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCS_COMPLETE.md  DOCS_RESTRUCTURE_SUMMARY.md  README.md  index.html  index.md  justfile  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  zensical.toml
.github/: PERMISSIONS.md  PYPI_CHECKLIST.md  PYPI_SETUP.md  README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-feature_request.md  2-bug_report.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml  packaging-smoke.yml  publish-docs.yml  publish.yml  release.yml  update-changelog.yml
api/: index.html  index.md
api/core-models/: index.html  index.md
api/field-metadata/: index.html  index.md
api/global-functions/: index.html  index.md
api/query-builder/: index.html  index.md
connection/: index.html  index.md
contributing/: index.html  index.md
crates/ferro-ddl-lowering/: Cargo.toml
crates/ferro-migrate/: Cargo.toml
crates/ferro-schema-ir/: Cargo.toml
docs/: TEST_RESULTS.md  api.md  changelog.md  coming-soon.md  connection.md  contributing.md  faq.md  fields.md  index.md  migration-sqlalchemy.md  migrations.md  models.md  queries.md  relations.md  transactions.md  why-ferro.md
docs/api/: core-models.md  exceptions.md  field-metadata.md  fields.md  global-functions.md  model.md  query-builder.md  query.md  raw-sql.md  relationships.md  transactions.md  utilities.md
docs/brainstorms/: 2026-04-29-named-connections-role-routing-requirements.md  2026-05-08-typed-query-predicates-requirements.md  2026-05-13-configurable-column-storage-types-requirements.md  2026-05-14-autogenerate-support-for-db-type-requirements.md  2026-05-25-annotated-strenum-cold-hydration-requirements.md  2026-06-24-ir-p8-119-wire-automigrate-requirements.md  2026-06-25-ir-p8-120-parity-gate-requirements.md  2026-06-26-ir-p8.5-140-shared-lowering-requirements.md  2026-06-26-ir-p8.5-143-db-type-drop-requirements.md  2026-06-26-ir-p8.5-144-reconcile-indexes-requirements.md  2026-06-28-ir-p8.5-141-single-schema-ir-producer-requirements.md  2026-06-29-ir-p8.6-146-dialect-enum-unification-requirements.md  2026-06-29-ir-p8.6-153-create-path-ir-requirements.md  2026-06-30-ir-p8.6-155-deferred-annotations-requirements.md  2026-06-30-ir-p8.6-158-check-renderer-requirements.md  2026-07-01-ir-p8.6-154-datetime-tz-coarseness-requirements.md  2026-07-01-ir-p8.6-162-typed-save-bind-requirements.md  2026-07-01-ir-p8.6-165-blob-introspection-false-positive-requirements.md
docs/concepts/: architecture.md  identity-map.md  performance.md  query-typing.md  type-safety.md
docs/examples/: multiple_databases.py  mutations.py  pagination.py  predicates.py  predicates_annotated.py  quickstart.py  quickstart_annotated.py  raw_sql.py  relationships.py  relationships_annotated.py  soft_deletes.py  soft_deletes_annotated.py  testing_conftest.py  timestamps.py  timestamps_annotated.py  transactions.py
docs/getting-started/: installation.md  next-steps.md  tutorial.md
docs/guide/: backend.md  database.md  migrations.md  models-and-fields.md  mutations.md  queries.md  relationships.md  transactions.md
docs/howto/: multiple-databases.md  pagination.md  soft-deletes.md  testing.md  timestamps.md
docs/pages/: contributing.md  faq.md  index.md  roadmap.md  why-ferro.md
docs/plans/: 2026-04-24-001-refactor-multi-db-backend-architecture-plan.md  2026-04-29-001-typed-null-binds-plan.md  2026-04-29-002-feat-named-connections-plan.md  2026-05-07-001-refactor-generic-model-connection-plan.md  2026-05-08-001-feat-typed-query-predicates-plan.md  2026-05-13-001-feat-configurable-column-storage-types-plan.md  2026-05-25-001-fix-annotated-strenum-cold-hydration-plan.md  2026-06-19-001-ir-first-roadmap.md  2026-06-24-001-feat-ir-p8-119-wire-automigrate-plan.md  2026-06-25-001-feat-ir-p8-120-parity-gate-plan.md  2026-06-26-001-feat-ir-p8.5-140-shared-lowering-plan.md  2026-06-26-002-feat-ir-p8.5-143-db-type-drop-plan.md  2026-06-26-003-feat-ir-p8.5-144-reconcile-indexes-plan.md  2026-06-28-001-feat-ir-p8.5-141-single-schema-ir-producer-plan.md  2026-06-29-001-refactor-ir-p8.6-153-create-path-unification-plan.md  2026-06-29-002-refactor-ir-p8.6-146-dialect-enum-unification-plan.md  (+7 more)
fields/: index.html  index.md
migrations/: index.html  index.md
models/: index.html  index.md
queries/: index.html  index.md
relations/: index.html  index.md
scripts/: demo_queries.py  demo_queries_pre_v012.py
search/: search_index.json
src/: backend.rs  codec.rs  connection.rs  hydration.rs  introspect.rs  lib.rs  migrate.rs  operations.rs  query.rs  schema.rs  schema_bind.rs  state.rs
src/ferro/: _core.pyi  (+17 more)
tests/: __init__.py  conftest.py  db_backends.py  test_aggregation.py  test_alembic_autogenerate.py  test_alembic_bridge.py  test_alembic_db_type.py  test_alembic_nullability.py  test_alembic_type_mapping.py  test_auto_migrate.py  test_bulk_update.py  test_composite_index.py  test_composite_unique.py  test_connection.py  test_connection_redaction.py  test_constraints.py  test_cross_emitter_parity.py  test_crud.py  test_db_backends.py  test_db_type_cross_emitter_parity.py  test_db_type_integration.py  test_db_type_typing.py  test_db_type_validation.py  test_deletion.py  test_deprecated_operator_inventory.py  test_deprecations.py  test_docs_examples.py  test_documentation_features.py  test_enum_cold_hydration.py  test_field_wrapper.py  test_framework_predicates.py  test_helpers.py  test_hydration.py  test_ir_vectors_contract.py  test_metaclass_internals.py  test_metadata.py  test_migrate_plan.py  test_models.py  test_named_connections_integration.py  test_one_to_one.py  (+22 more)
transactions/: index.html  index.md
(+87 files in other folders)
