[package]
name = "ferro"
version = "0.2.0"
edition = "2024"

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3-py39"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.21"
dashmap = "6.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "any"]}
sea-query = "0.32"
tokio = { version = "1.49", features = ["full"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
uuid = { version = "1.11", features = ["v4"] }
