[package]
name = "ferro"
version = "0.5.0"
edition = "2024"

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[features]
# extension-module is on by default so `maturin develop` and release builds
# produce a Python extension module (skips linking against libpython.so).
# Disable it for `cargo test` so the test binary can link libpython:
#   cargo test --no-default-features --features testing
# The `testing` feature pulls in pyo3/auto-initialize so unit tests that call
# `Python::attach(...)` start the interpreter automatically.
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
testing = ["pyo3/auto-initialize"]

[dependencies]
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { version = "0.27.1", features = ["abi3-py39"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.21"
dashmap = "6.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "any", "tls-rustls-ring-webpki", "uuid"]}
sea-query = { version = "0.32", features = ["with-uuid"] }
tokio = { version = "1.49", features = ["full"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
uuid = { version = "1.11", features = ["v4"] }
