[project]
name = "ferro-orm"
version = "0.1.0"
description = "A high-performance, Rust-backed ORM for Python."
readme = "README.md"
authors = [
    { name = "0x54", email = "taylor@sondr.co" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
]

[tool.maturin]
module-name = "ferro._core"
python-packages = ["ferro"]
python-source = "src"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
alembic = [
    "alembic>=1.18.1",
    "sqlalchemy>=2.0.46",
]
release = [
    "python-semantic-release>=9.0.0",
    "maturin>=1.11.5",
]
dev = [
    "jupyter>=1.1.1",
    "maturin>=1.11.5",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=7.0.0",
    "rich>=14.2.0",
    "prek>=0.2.25",
    "commitizen>=3.13.0",
    "python-semantic-release>=9.0.0",
    "alembic>=1.18.1",
    "sqlalchemy>=2.0.46",
    "mkdocs-material>=9.5.0",
    "mkdocs-llmstxt>=0.3.0",
    "mkdocstrings[python]>=0.24.0",
    "pymdown-extensions>=10.7.0",
    "pytest-examples>=0.0.18",
]

[tool.pytest.ini_options]
addopts = "--cov=src"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:project.version",
    "Cargo.toml:package.version"
]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
changelog_incremental = true
major_version_zero = true

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
    "Cargo.toml:package.version"
]
version_variables = []
build_command = "uv run maturin build --release"
major_on_zero = false
allow_zero_version = true
branch = "main"
upload_to_repository = false
upload_to_release = true
hvcs = "github"
commit_author = "semantic-release <semantic-release@github>"
commit_message = "chore(release): {version}\n\nAutomatically generated by python-semantic-release"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
template_dir = "templates"
exclude_commit_patterns = []

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.changelog.environment]
keep_trailing_newline = true

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
